# leptos-hl-contact

./: CHANGELOG.md  Cargo.toml  NOTICE  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/core/src/: server.rs
crates/core/src/config/: tests.rs
crates/core/src/delivery/: noop.rs  smtp.rs
crates/core/src/delivery/smtp/: tests.rs
crates/core/src/error/: tests.rs
crates/core/src/model/: tests.rs
crates/leptos-hl-contact/: Cargo.toml
crates/leptos-hl-contact/src/: axum_helpers.rs  components.rs  config.rs  csrf.rs  error.rs  lib.rs  model.rs  security.rs  server.rs
crates/leptos-hl-contact/src/axum_helpers/: tests.rs
crates/leptos-hl-contact/src/csrf/: tests.rs
crates/leptos-hl-contact/src/delivery/: noop.rs  smtp.rs
crates/leptos-hl-contact/src/delivery/noop/: tests.rs
crates/leptos-hl-contact/src/delivery/smtp/: tests.rs
crates/leptos-hl-contact/src/security/: tests.rs
crates/leptos-hl-contact/src/server/: tests.rs
docs/: book.toml
docs/src/: SUMMARY.md  accessibility.md  api-reference.md  architecture.md  axum-integration.md  configuration.md  csrf.md  delivery-backends.md  faq.md  feature-flags.md  installation.md  introduction.md  quick-start.md  security.md  styling.md  testing.md  troubleshooting.md  turnstile.md
examples/axum-basic/: Cargo.toml
examples/axum-basic/src/: app.rs  main.rs
examples/axum-with-security/: Cargo.toml
examples/axum-with-security/src/: app.rs  main.rs
leptos-hl-contact-crate/: Cargo.toml
leptos-hl-contact-crate/src/: axum_helpers.rs  components.rs  config.rs  error.rs  lib.rs  model.rs  security.rs  server.rs
leptos-hl-contact-crate/src/delivery/: mod.rs  noop.rs  smtp.rs
