[workspace]
resolver = "2"
members = [
    "crates/leptos-hl-contact",
    "examples/axum-basic",
    "examples/axum-with-security",
]

[workspace.package]
edition = "2024"
version = "0.3.1"
authors = ["nabbisen"]
license = "Apache-2.0"
repository = "https://github.com/nabbisen/leptos-hl-contact"
rust-version = "1.85"
