# This example is NOT a workspace member.
# Run it standalone:
#   cd examples/axum-basic && cargo run
#
# This is a LOCAL DEVELOPMENT example only.
# Use examples/axum-with-security for production-ready wiring.
[package]
name        = "axum-basic"
description = "Local-dev example: leptos-hl-contact with NoopDelivery (no CSRF, no rate limiting)."
version     = "0.3.2"
edition     = "2024"
authors     = ["nabbisen"]
license     = "Apache-2.0"
publish     = false

[[bin]]
name = "axum-basic"
path = "src/main.rs"

[dependencies]
leptos         = { version = "0.8", features = ["ssr"] }
leptos_axum    = { version = "0.8" }
leptos_router  = { version = "0.8" }
leptos-hl-contact = { path = "../../crates/leptos-hl-contact", features = ["ssr", "smtp-lettre", "axum-helpers"] }
axum           = { version = "0.8" }
tower          = { version = "0.5" }
tower-http     = { version = "0.6", features = ["limit"] }
tokio          = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy        = "0.15"
